# blog-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.build.yaml  compose.yaml
.github/workflows/: docker-image.yaml
.sqlx/: query-04aba81e1c91e40940e7e53182383bedfc7fb6123511bf0ba6ef8ff2516597da.json  query-2bc7e413073213526d6d3ee7f791e76a90b5018e854a7c9d5107adff8be69c14.json  query-5b2069518cc46940053dc79134cc0a41e5cc21879f1844ad046bc798743fe1f2.json  query-5df09591bad0ea15f503c5044d3a0569b909ce87253b4a144ce58a3e6566b25b.json  query-64ab89a2c49b88819b6a5ba3510c79df97621da234f72020e72b9042bd631959.json  query-6c0166426d75160c7f5eebc2f7c2283927425bc3b23d02bfdcf6d8652c7ebfa3.json  query-7871890234df0cb0f1cfdd88ac0d36c366c27d7ff0a82de3ed75600f42277a23.json  query-87fc6ae0ed8071ad117ddcf446d62b76d17366bbd6a9df9951e3ca8577c5ed22.json  query-88be6a486fff5ece989948947e860e24fefef3d7df787b0118f133fef2fdc636.json  query-88e31862d5ea3655dad4683321a16bc0f3226b799f8aa5706241995aa1ec7f05.json  query-9146decbf6c8969a11b970fcbed1d8e078f7234b00a64fd83d54d3f89936d855.json  query-b33cfe95481e8c2f9c1b8212e6064f189fe527c72b98b56e238411ca0ccca427.json  query-bec577616988a9fc1ff4751356355fa406acf6b72e40fd3f2b86c7c6bb545160.json  query-bf3452682fc48e4fbdfcfae378b57283a9c5e1e208548054830ad41595372de4.json  query-e63e2f8a1596ca2975c5736e707f9403a5319260466604b8eb4712b8c3621d0d.json  query-ebfe601ecd2597bf31e145bb20e63cd76f11853065507e666e31ac7c4d9c216b.json  query-f386f7b43dd43738536f9e44caa2f5bc0c0b8bc33a7e95a76c6324e1d72e364f.json  query-f981f19da3798c0a6ca886819b15bdc2fb84d60aa394aa23de463b13e7c1d368.json
migrations/: 20260426035210_create_users.sql  20260521041940_create_posts.sql  20260613100300_create_all.sql
src/: main.rs
src/blog/api/: argon2_hash.rs  error.rs  jwt.rs  mod.rs
src/blog/api/endpoint/: account.rs  auth.rs  drafts.rs  mod.rs  posts.rs  profile.rs  users.rs
src/blog/api/extract/: auth_user.rs
src/blog/api/middleware/: console.rs
src/blog/core/: application.rs
tests/bruno/: .env.example  .gitignore  opencollection.yml
tests/bruno/Auth/: Login.yml
tests/bruno/Drafts/: Get draft.yml  Get drafts.yml  folder.yml
tests/bruno/Posts/: Create post.yml  Delete post.yml  Get post.yml  Get posts.yml  Hide post.yml  Publish post.yml  Update post.yml
tests/bruno/Profile/: Get profile.yml  Update password.yml  Update profile.yml
tests/bruno/Users/: Get user.yml
tests/bruno/environments/: public.yml
