[package]
name = "blog"
version = "1.0.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"

[lib]
name = "blog"
path = "src/blog/lib.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["json"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
axum-macros = "0.5.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
headers = "0.4.1"
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.18.0", features = ["time_0_3"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "chrono",
] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
validator = { version = "0.20.0", features = ["derive"] }
